excel v2 - apply CoR

--- a/csv.excel/src/main/resources/userImport.properties
+++ b/csv.excel/src/main/resources/userImport.properties
@@ -2,3 +2,4 @@ user_firstName_blank = FirstName ?ang blank r?i anh giai ?i
 user_LastName_blank = FirstName ?ang blank r?i anh giai ?i
 user_Email_blank = FirstName ?ang blank r?i anh giai ?i
 user_phone_duplicate = FirstName ?ang blank r?i anh giai ?i
+user_email_minLength_failed = Min leng be the anh oi
