--- a/csv.excel/src/main/resources/userImport.properties
+++ b/csv.excel/src/main/resources/userImport.properties
@@ -1,5 +1,14 @@
-user_firstName_blank = FirstName ?ang blank r?i anh giai ?i
-user_LastName_blank = FirstName ?ang blank r?i anh giai ?i
-user_Email_blank = FirstName ?ang blank r?i anh giai ?i
-user_phone_duplicate = FirstName ?ang blank r?i anh giai ?i
-user_email_minLength_failed = Min leng be the anh oi
+######################
+### user Import
+######################
+import.user.firstName_blank = FirstName dang blank roi anh giai oi 
+import.user.LastName_blank = Last Name dang blank roi anh giai oi 
+import.user.Email_blank = Email dang blank roi anh giai oi 
+import.user.phone_duplicate = phone dang duplicate roi anh giai oi 
+import.user.phone_invalidFormat = phone dang khong dung format mat roi.
+import.user.email_minLength_failed = Min leng be the anh oi
+
+######################
+### BinhDTO Import
+######################
+import.BinhDTO.field1.blank= he
