--- a/project_icommerce/Icommerce/business/product-service/src/main/resources/application-test.yml
+++ b/project_icommerce/Icommerce/business/product-service/src/main/resources/application-test.yml
@@ -1,7 +1,7 @@
 #logging.level.org.hibernate.SQL: debug
 #logging.level.org.hibernate.type.descriptor.sql: trace
 app.mysql:
-  host: localhost
+  host: 18.140.210.253
   port: 3307
 
 spring:
